[tool.poetry]
name = "infra"
version = "0.1.0"
description = ""
authors = ["iamjustinthecloud <iamjustinthecloud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
attrs = "^25.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
